serde-query/tests/compile-fail/conflicting_query.stderr
error: Conflicting query
 --> tests/compile-fail/conflicting_query.rs:1:10
  |
1 | #[derive(serde_query::Deserialize, serde_query::DeserializeQuery)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `serde_query::Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Conflicting query
 --> tests/compile-fail/conflicting_query.rs:1:36
  |
1 | #[derive(serde_query::Deserialize, serde_query::DeserializeQuery)]
  |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `serde_query::DeserializeQuery` (in Nightly builds, run with -Z macro-backtrace for more info)
